...
  {
    id: 'norris',
    name: 'Lando Norris',
    shortName: 'NOR',
    number: 1,
    constructorId: 'mclaren',
    constructorName: 'McLaren F1 Team',
    nationality: 'British',
    price: 361,
    previousPrice: 361,
    seasonPoints: 0,
    currentSeasonPoints: 0,
    fantasyPoints: 0,
...
  {
    id: 'verstappen',
    name: 'Max Verstappen',
    shortName: 'VER',
    number: 3,
    constructorId: 'red_bull',
    constructorName: 'Oracle Red Bull Racing',
    nationality: 'Dutch',
    price: 367,
    previousPrice: 367,
    seasonPoints: 0,
    currentSeasonPoints: 0,
    fantasyPoints: 0,
...
